html saving update

--- a/taylor_swift_song_analysis.ipynb
+++ b/taylor_swift_song_analysis.ipynb
@@ -2329,7 +2329,7 @@
     "# now plot\n",
     "fig = px.bar(df_song_count, x=\"album\", y=\"Songs\", title=\"Number of songs per album\", color='album', \n",
     "            template='plotly_dark', color_discrete_sequence=color_piyg) #, width=600, height=400)\n",
-    "fig.write_html('./images/number_songs_per_album.html')\n",
+    "# fig.write_html('./images/number_songs_per_album.html')\n",
     "fig.show()\n"
    ]
   },
@@ -7012,8 +7012,8 @@
     "                                line=dict(width=width,\n",
     "                                            color=linecolor)),\n",
     "                                selector=dict(mode='markers'))\n",
-    "\n",
-    "    fig.write_html('./images/'+title+'.html')\n",
+    "    # save the plot as an html\n",
+    "    # fig.write_html('./images/'+title+'.html')\n",
     "    fig.show()"
    ]
   },
@@ -14729,7 +14729,8 @@
     "                                    line=dict(width=width,\n",
     "                                                color=linecolor)),\n",
     "                                    selector=dict(mode='markers'))\n",
-    "    fig.write_html('./images/'+title+'.html')\n",
+    "    # save the plot as an html\n",
+    "    # fig.write_html('./images/'+title+'.html')\n",
     "    fig.show()\n"
    ]
   },
@@ -18808,7 +18809,9 @@
     "                                    line=dict(width=2,\n",
     "                                                color=edgecolor)))\n",
     "    fig.update_xaxes(tickangle=-30)\n",
-    "    fig.write_html('./images/'+title+'.html')                                            \n",
+    "\n",
+    "    # save the plot as an html\n",
+    "    # fig.write_html('./images/'+title+'.html')                                            \n",
     "    fig.show()\n"
    ]
   },
@@ -18840,7 +18843,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "length",
          "orientation": "v",
          "showlegend": true,
@@ -19765,7 +19768,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "popularity",
          "orientation": "v",
          "showlegend": true,
@@ -20689,7 +20692,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "energy",
          "orientation": "v",
          "showlegend": true,
@@ -21614,7 +21617,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "danceability",
          "orientation": "v",
          "showlegend": true,
