--- a/taylor_swift_song_analysis.ipynb
+++ b/taylor_swift_song_analysis.ipynb
@@ -8,7 +8,7 @@
     "# Taylor Swift song analysis\n",
     "#### In this notebook we will analyze metadata information from Spotify about all of Taylor Swift's albums. The goal is to gain an overview of how Taylor's songs have changed overtime, and identify if there are any key trends or outliers in her songs.\n",
     "#### Data is retrieved from [kaggle](https://www.kaggle.com/datasets/marcnhwu/taylor-swift-songs-with-audio-features-in-spotify)\n",
-    "\n",
+    "### Most plots are done with plotly express.\n",
     "\n",
     "# <font color=red> also add analysis on the lyrics with vader. can also check how the sentiment score of the songs compare to the spotify attributes. [new dataset here](https://www.kaggle.com/datasets/thespacefreak/taylor-swift-song-lyrics-all-albums)\n",
     "\n",
@@ -28832,7 +28832,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('myenv')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
