--- a/taylor_swift_song_analysis_V2.ipynb
+++ b/taylor_swift_song_analysis_V2.ipynb
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "id": "5968b4cc",
    "metadata": {},
    "outputs": [
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7dae01b4",
    "metadata": {},
    "outputs": [
@@ -2413,7 +2413,7 @@
        "Name: name, Length: 158, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "97d5386d",
    "metadata": {},
    "outputs": [
@@ -2712,7 +2712,7 @@
        "[158 rows x 14 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2725,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3cc65607",
    "metadata": {},
    "outputs": [
@@ -2749,7 +2749,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "98906b56",
    "metadata": {},
    "outputs": [
@@ -3045,7 +3045,7 @@
        "[158 rows x 14 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3059,13 +3059,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "70160e58",
    "metadata": {},
    "outputs": [],
    "source": [
     "## save the cleaned dataframe as a csv\n",
-    "df.to_csv('clean_df.csv')"
+    "df.to_csv('clean_df.csv', index=False)"
    ]
   },
   {
@@ -3096,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "cc8313f4",
    "metadata": {},
    "outputs": [
@@ -3120,7 +3120,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3131,7 +3131,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
+   "id": "378b178d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['length',\n",
+       " 'popularity',\n",
+       " 'danceability',\n",
+       " 'acousticness',\n",
+       " 'energy',\n",
+       " 'instrumentalness',\n",
+       " 'liveness',\n",
+       " 'loudness',\n",
+       " 'speechiness',\n",
+       " 'valence',\n",
+       " 'tempo']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attributes = list(df.columns)\n",
+    "attributes.remove('name')\n",
+    "attributes.remove('album')\n",
+    "attributes.remove('release_date')\n",
+    "attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08734273",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e144fc25",
    "metadata": {},
    "outputs": [
@@ -3371,7 +3414,7 @@
        "[158 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3394,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "6af63b60",
    "metadata": {},
    "outputs": [],
@@ -3414,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4babe5ab",
    "metadata": {},
    "outputs": [
@@ -6492,7 +6535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "e5740308",
    "metadata": {},
    "outputs": [],
@@ -6529,7 +6572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "775a7de1",
    "metadata": {},
    "outputs": [
@@ -9388,7 +9431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "1b812817",
    "metadata": {},
    "outputs": [],
@@ -9407,7 +9450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "3a05568d",
    "metadata": {},
    "outputs": [
@@ -10499,7 +10542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "41e64dfa",
    "metadata": {},
    "outputs": [],
@@ -10518,7 +10561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "427ca031",
    "metadata": {},
    "outputs": [],
@@ -10541,7 +10584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "98836f53",
    "metadata": {},
    "outputs": [],
@@ -10558,7 +10601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "12c69a04",
    "metadata": {},
    "outputs": [],
@@ -10570,7 +10613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "5511eefb",
    "metadata": {},
    "outputs": [],
@@ -10582,7 +10625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "06ad28be",
    "metadata": {},
    "outputs": [],
@@ -10611,7 +10654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "0ede17ec",
    "metadata": {},
    "outputs": [
@@ -12528,7 +12571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "277a78fe",
    "metadata": {},
    "outputs": [
@@ -14445,7 +14488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "19c0bcc6",
    "metadata": {},
    "outputs": [
@@ -16371,7 +16414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "fa6c82a3",
    "metadata": {},
    "outputs": [
@@ -18305,7 +18348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "789300da",
    "metadata": {},
    "outputs": [],
@@ -18328,7 +18371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "fe25e08d",
    "metadata": {},
    "outputs": [
@@ -20242,7 +20285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "807af009",
    "metadata": {},
    "outputs": [
@@ -22168,7 +22211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "927494f4",
    "metadata": {},
    "outputs": [
@@ -22372,7 +22415,7 @@
        "evermore      120.707294  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22386,7 +22429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "c94fa4d4",
    "metadata": {},
    "outputs": [],
@@ -22409,7 +22452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "368a6715",
    "metadata": {},
    "outputs": [
@@ -22435,7 +22478,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "length",
          "orientation": "v",
          "showlegend": true,
@@ -23334,7 +23377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "879b1a1f",
    "metadata": {},
    "outputs": [
@@ -23360,7 +23403,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "popularity",
          "orientation": "v",
          "showlegend": true,
@@ -24258,7 +24301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "289de83b",
    "metadata": {},
    "outputs": [
@@ -24284,7 +24327,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "energy",
          "orientation": "v",
          "showlegend": true,
@@ -25183,7 +25226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "f3422b29",
    "metadata": {},
    "outputs": [
@@ -25209,7 +25252,7 @@
           "size": 15,
           "symbol": "diamond"
          },
-         "mode": "lines+markers",
+         "mode": "markers+lines",
          "name": "danceability",
          "orientation": "v",
          "showlegend": true,
@@ -26108,7 +26151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "31b49600",
    "metadata": {},
    "outputs": [],
@@ -26152,7 +26195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "26081a80",
    "metadata": {},
    "outputs": [
@@ -27838,7 +27881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "65928511",
    "metadata": {},
    "outputs": [
@@ -28780,7 +28823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "348e5960",
    "metadata": {},
    "outputs": [],
@@ -28799,7 +28842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "9bad7430",
    "metadata": {},
    "outputs": [],
